--- a/index.html
+++ b/index.html
@@ -964,7 +964,8 @@
 
         <h2>Responsibilities & Achievements:</h2>
         <ul>
-             <li>Prepared and submitted handover documents for Project Completion Certificate (PCC), DC clearance, and Final Completion Certificate (FCC).</li>
+            <li>Creating and maintaining comprehensive document registers or logs to track all project documents, their statuses, and revisions.</li>
+            <li>Prepared and submitted handover documents for Project Completion Certificate (PCC), DC clearance, and Final Completion Certificate (FCC).</li>
             <li>Managed getting DC clearance by submitting deliverables on time through Ashghal's Project Document Lifecycle Management (PDLM) system.</li>
             <li>Developed Operation & Maintenance (O&M) Manuals. These manuals detail equipment procedures, maintenance schedules, and safety protocols for system operation.</li>
             <li>Ensured all submissions met Ashghal's standards and guidelines.</li>
@@ -984,10 +985,11 @@
 
         <h2>Responsibilities & Achievements:</h2>
         <ul>
-           <li>Receive Technical Documents, Letters, RFIs and other documents from the Contractor</li>
-            <li>Record all Incoming and Outgoing Documents in the system</li>
-            <li>Forward documents to the Client team for their review and approval</li>
-            <li>Ensured all submissions met Company's standards and guidelines.</li>
+           <li>Efficiently managed, organized, and maintained all project-related documents, including drawings, specifications, submittals, RFIs, meeting minutes, and correspondence. This involved receiving, logging, and accurately filing both hard copy and electronic formats, ensuring they were easily retrievable.</li>
+            <li>Operated and maintained the project's document control system, ensuring proper indexing, version control, and distribution of all incoming and outgoing documents in accordance with project procedures and KEO's standards.</li>
+            <li>Actively received and logged all incoming documents from the Contractor and other external parties. Coordinated directly with the Contractor regarding document submissions, transmittals, and any discrepancies. </li>
+            <li>Performed quality checks on all documents to ensure accuracy, completeness, and adherence to project and company documentation standards, including proper numbering, titling, and revision control before circulation or archiving. This included verifying transmittals from the Contractor against received documents.</li>
+            <li>Maintained comprehensive logs and registers for various document types (e.g., submittal log, RFI log, drawing register), meticulously tracking the status of Contractor submissions, review cycles, and approvals.</li>
         </ul>
         <button onclick="hideWorkExperienceDetail()" class="back-button">← Back to Portfolio</button>
     </div>
@@ -1000,10 +1002,10 @@
 
         <h2>Responsibilities & Achievements:</h2>
         <ul>
-            <li>fficiently managed project documentation using the Aconex platform.</li>
-            <li>Maintained a comprehensive Master Filing System for secure storage of technical documents.</li>
-            <li>Ensured accurate document structure and data integrity to support clear client communication.</li>
-            <li>Proficiently uploaded and organized data on the Client's APMS.</li>
+            <li>Expertly utilized leading digital document management and collaboration platforms, including Aconex, for the complete lifecycle management of project documentation. This involved uploading, downloading, distributing, and tracking documents, ensuring efficient information flow among all project participants.</li>
+            <li>Proficiently operated Ashghal's Project Management System (APMS) for the formal submission and tracking of various project documents, official letters, and correspondence. </li>
+            <li>Prepared, formatted, and submitted Material Inspection Reports (MIRs) through the designated project platforms, ensuring all necessary details, attachments, and approvals were in place for official review and approval by the client or supervising consultant.</li>
+            <li>Held responsibility for the timely and accurate submission of Shop Drawings, which included conducting preliminary checks for completeness, correct formatting, and adherence to project specifications and client requirements before formal transmittal and tracking through the relevant systems.</li>
             <li>Implemented seamless internal workflows through Aconex to enhance efficiency.</li>
         </ul>
         <button onclick="hideWorkExperienceDetail()" class="back-button">← Back to Portfolio</button>
@@ -1033,11 +1035,12 @@
 
         <h2>Responsibilities & Achievements:</h2>
         <ul>
-            <li>Accountable for accurate and organized document control in alignment with established company procedures across multiple projects, including the Expressway and LRDP.</li>
-            <li>Uploaded technical documents and correspondences to the EDMS.</li>
-            <li>Handled document distribution, maintained electronic folders and directories, and ensured proper tracking and retrieval of documents and drawings.</li>
-            <li>Delivered document control training sessions for new employees.</li>
-            <li>Developed document filing structures and necessary forms for new projects.</li>
+            <li>Led the successful introduction and implementation of a robust and highly efficient document control system across various large-scale Expressway and Local Roads & Drainage Projects (LRDP). This initiative significantly enhanced organizational efficiency and compliance with project requirements.</li>
+            <li>Designed and developed comprehensive document distribution matrices, optimizing the flow of information to ensure that all project stakeholders received the correct and latest versions of documents in a timely manner, thereby minimizing errors and improving collaboration.</li>
+            <li>Operated and managed document control functions across multiple diverse platforms, including Enterprise Document Management Systems (EDMS) and SharePoint, ensuring smooth integration and consistency in documentation practices across different projects.</li>
+            <li>Developed and delivered training programs for new document control staff, ensuring their rapid integration into project workflows and adherence to established document control procedures and best practices.</li>
+            <li>Actively participated in both internal and external quality audits, contributing to the continuous improvement of document control processes and ensuring compliance with industry standards and project-specific quality management systems.</li>
+            <li>Systematically analyzed existing document control workflows and identified areas for improvement, leading to the implementation of solutions that significantly reduced processing times and enhanced the overall efficiency of document management operations.</li>
         </ul>
         <button onclick="hideWorkExperienceDetail()" class="back-button">← Back to Portfolio</button>
     </div>
@@ -1050,7 +1053,7 @@
 
         <h2>Responsibilities & Achievements:</h2>
         <ul>
-             <li>Effectively established comprehensive registers for tracking all incoming and outgoing communications, including letters and faxes.</li>
+            <li>Effectively established comprehensive registers for tracking all incoming and outgoing communications, including letters and faxes.</li>
             <li>Demonstrated expertise in handling project-specific technical documents such as Drawings, Material Submittals, RFIs, RFITs, MDS, NCRs, SDRs, and others.</li>
             <li>Managed both physical and digital copies to ensure efficient storage, easy retrieval, proper archiving, and accurate indexing.</li>
             <li>Supported smooth document control and project coordination through organized and accessible documentation systems.</li>
