--- a/index.html
+++ b/index.html
@@ -647,6 +647,8 @@
         <h1 data-aos="zoom-in" data-aos-delay="200">Kishor Sankaran</h1>
         <p data-aos="zoom-in" data-aos-delay="400">Document Management Expert</p>
         <p class="enter-text" data-aos="fade-up" data-aos-delay="800">Explore Portfolio</p>
+        <!-- Designed by Kishor Sankaran Footer for Cover Page -->
+        <p style="text-align: center; margin-top: 30px; font-size: 0.9em; color: #5D605F;">Designed by Kishor Sankaran</p>
     </div>
 
     <div id="main-content" style="display: none;">
@@ -952,9 +954,11 @@
             <p>Visit my LinkedIn Profile @ <a href="https://www.linkedin.com/in/kishor-sankaran-30649612b">https://www.linkedin.com/in/kishor-sankaran-30649612b</a></p>
             <p>Follow me on Instagram @ <a href="https://instagram.com/kishor_sankaran?igshid=OGQ5ZDc2ODk2ZA==">Kishor Sankaran</a></p>
         </div>
+        <!-- Designed by Kishor Sankaran Footer for Main Content Page -->
+        <p style="text-align: center; margin-top: 30px; padding-bottom: 20px; font-size: 0.9em; color: #5D605F;">Designed by Kishor Sankaran</p>
     </div>
 
-    <!-- START: Work Experience Detail Sections (These were previously separate HTML files) -->
+    <!-- START: Work Experience Detail Sections (These were previously separate HTML files, now embedded) -->
 
     <!-- VA Tech Wabag Ltd Detail -->
     <div id="va-tech-wabag-detail" class="work-detail-container" data-aos="fade-up">
@@ -975,6 +979,8 @@
             <li>Gathered closeout details from the team, updated the Snag List across different areas, and prepared weekly reports and an overall snag summary.</li>
         </ul>
         <button onclick="hideWorkExperienceDetail()" class="back-button">← Back to Portfolio</button>
+        <!-- Designed by Kishor Sankaran Footer for Detail Page -->
+        <p style="text-align: center; margin-top: 30px; font-size: 0.9em; color: #5D605F;">Designed by Kishor Sankaran</p>
     </div>
 
     <!-- KEO International Consultants Detail -->
@@ -992,6 +998,8 @@
             <li>Maintained comprehensive logs and registers for various document types (e.g., submittal log, RFI log, drawing register), meticulously tracking the status of Contractor submissions, review cycles, and approvals.</li>
         </ul>
         <button onclick="hideWorkExperienceDetail()" class="back-button">← Back to Portfolio</button>
+        <!-- Designed by Kishor Sankaran Footer for Detail Page -->
+        <p style="text-align: center; margin-top: 30px; font-size: 0.9em; color: #5D605F;">Designed by Kishor Sankaran</p>
     </div>
 
     <!-- China Railway Construction Corporation Detail -->
@@ -1008,6 +1016,8 @@
             <li>Held responsibility for the timely and accurate submission of Shop Drawings, which included conducting preliminary checks for completeness, correct formatting, and adherence to project specifications and client requirements before formal transmittal and tracking through the relevant systems.</li>
         </ul>
         <button onclick="hideWorkExperienceDetail()" class="back-button">← Back to Portfolio</button>
+        <!-- Designed by Kishor Sankaran Footer for Detail Page -->
+        <p style="text-align: center; margin-top: 30px; font-size: 0.9em; color: #5D605F;">Designed by Kishor Sankaran</p>
     </div>
 
     <!-- Continental Mercantile Corporation Detail -->
@@ -1024,6 +1034,8 @@
             <li>Maintained thorough records of interviews and new hires, contributing to streamlined and effective HR processes.</li>
         </ul>
         <button onclick="hideWorkExperienceDetail()" class="back-button">← Back to Portfolio</button>
+        <!-- Designed by Kishor Sankaran Footer for Detail Page -->
+        <p style="text-align: center; margin-top: 30px; font-size: 0.9em; color: #5D605F;">Designed by Kishor Sankaran</p>
     </div>
 
     <!-- QBS International WLL Detail -->
@@ -1042,6 +1054,8 @@
             <li>Systematically analyzed existing document control workflows and identified areas for improvement, leading to the implementation of solutions that significantly reduced processing times and enhanced the overall efficiency of document management operations.</li>
         </ul>
         <button onclick="hideWorkExperienceDetail()" class="back-button">← Back to Portfolio</button>
+        <!-- Designed by Kishor Sankaran Footer for Detail Page -->
+        <p style="text-align: center; margin-top: 30px; font-size: 0.9em; color: #5D605F;">Designed by Kishor Sankaran</p>
     </div>
 
     <!-- Baytur Construction & Contracting Company Detail -->
@@ -1058,6 +1072,8 @@
             <li>Supported smooth document control and project coordination through organized and accessible documentation systems.</li>
         </ul>
         <button onclick="hideWorkExperienceDetail()" class="back-button">← Back to Portfolio</button>
+        <!-- Designed by Kishor Sankaran Footer for Detail Page -->
+        <p style="text-align: center; margin-top: 30px; font-size: 0.9em; color: #5D605F;">Designed by Kishor Sankaran</p>
     </div>
 
     <!-- Kamlesh Plastics Detail -->
@@ -1072,8 +1088,11 @@
             <li>Supervised staff effectively by creating optimal work schedules and delegating tasks appropriately.</li>
             <li>Organized and facilitated meetings, coordinated appointments, and maintained office calendars.</li>
             <li>Managed office supply inventories to ensure smooth and uninterrupted office operations.</li>
+            <li>Assisted with data entry and basic reporting.</li>
         </ul>
         <button onclick="hideWorkExperienceDetail()" class="back-button">← Back to Portfolio</button>
+        <!-- Designed by Kishor Sankaran Footer for Detail Page -->
+        <p style="text-align: center; margin-top: 30px; font-size: 0.9em; color: #5D605F;">Designed by Kishor Sankaran</p>
     </div>
 
     <!-- A&B Toolers Detail -->
@@ -1090,6 +1109,8 @@
             <li>Utilized computer systems and software proficiently to support daily office operations.</li>
         </ul>
         <button onclick="hideWorkExperienceDetail()" class="back-button">← Back to Portfolio</button>
+        <!-- Designed by Kishor Sankaran Footer for Detail Page -->
+        <p style="text-align: center; margin-top: 30px; font-size: 0.9em; color: #5D605F;">Designed by Kishor Sankaran</p>
     </div>
 
     <!-- END: Work Experience Detail Sections -->
