--- a/index.html
+++ b/index.html
@@ -647,8 +647,7 @@
         <h1 data-aos="zoom-in" data-aos-delay="200">Kishor Sankaran</h1>
         <p data-aos="zoom-in" data-aos-delay="400">Document Management Expert</p>
         <p class="enter-text" data-aos="fade-up" data-aos-delay="800">Explore Portfolio</p>
-        <!-- Designed by Kishor Sankaran Footer for Cover Page -->
-        <p style="text-align: center; margin-top: 30px; font-size: 0.9em; color: #5D605F;">Designed by Kishor Sankaran</p>
+        <!-- Removed "Designed by Kishor Sankaran" from Cover Page -->
     </div>
 
     <div id="main-content" style="display: none;">
