--- a/index.html
+++ b/index.html
@@ -974,7 +974,7 @@
             <li>Ensured all submissions met Ashghal's standards and guidelines.</li>
             <li>Supported and guided team members on preparing and submitting project documentation.</li>
             <li>Successfully coordinated with various stakeholders, including clients, consultants, and subcontractors, to ensure timely submission and acceptance of all handover deliverables.</li>
-            <li>Attended weekly handover meetings with the client and supervision consultant to discuss close-out document status.</li>
+            <li>Attend weekly handover meetings with clients and supervision consultants to discuss the status of close-out documentation. Prepare PowerPoint presentations and present them during the meetings, explaining key details as needed.</li>
             <li>Gathered closeout details from the team, updated the Snag List across different areas, and prepared weekly reports and an overall snag summary.</li>
         </ul>
         <button onclick="hideWorkExperienceDetail()" class="back-button">← Back to Portfolio</button>
