--- a/index.html
+++ b/index.html
@@ -866,7 +866,7 @@
 
                 <div class="skills-box" data-aos="fade-up" data-aos-delay="300">
                     <p>Quest for Knowledge</p>
-                    <p>Driven by curiosity, I continuously seek to learn and grow. I embrace new ideas and experiences as opportunities to expand my understanding and evolve both personally and professionally.</p>
+                    <p>Driven by curiosity, I continuously seek to learn and grow. I actively explore coding, web designing, and emerging technologies, aiming to integrate them into my professional field. I embrace new ideas and experiences as opportunities to expand my understanding and evolve both personally and professionally</p>
                 </div>
 
                 <div class="skills-box" data-aos="fade-up" data-aos-delay="400">
