--- a/index.html
+++ b/index.html
@@ -828,7 +828,7 @@
                 <!-- VA Tech Wabag Ltd -->
                 <div class="work-experience-box" data-aos="fade-up" data-aos-delay="200" onclick="showWorkExperienceDetail('va-tech-wabag')">
                     <p>2023-Present</p>
-                    <p>Handover Document Controller</p>
+                    <p> Senior Document Controller (Handover)</p>
                     <p>VA Tech Wabag Ltd</p>
                     <p>Doha, Qatar</p>
                 </div>
@@ -1397,3 +1397,4 @@ s0.parentNode.insertBefore(s1,s0);
 </script>
 <!--End of Tawk.to Script-->
 </html>
+
