--- a/index.html
+++ b/index.html
@@ -1123,7 +1123,7 @@
 
     <!-- VA Tech Wabag Ltd Detail -->
     <div id="va-tech-wabag-detail" class="work-detail-container" data-aos="fade-up">
-        <h1>VA Tech Wabag Ltd - Handover Document Controller</h1>
+        <h1>VA Tech Wabag Ltd - Senior Document Controller (Handover)</h1>
         <p><strong>Dates:</strong> 2023 - Present</p>
         <p><strong>Location:</strong> Doha, Qatar</p>
 
@@ -1397,4 +1397,5 @@ s0.parentNode.insertBefore(s1,s0);
 </script>
 <!--End of Tawk.to Script-->
 </html>
+
 
