--- a/index.html
+++ b/index.html
@@ -1111,7 +1111,7 @@
 
         <div class="contact-section" id="contact" data-aos="fade-up">
             <p>Contact me:</p>
-            <p>Mail me @: <a href="mailto:kishornambisan@gmail.com">kishornambisan@gmail.com</a></p>
+            <p>Mail me @: <a href="mailto:kishornambisan@gmail.com">kishornambisan@gmail.com</a> & <a href="mailto:kishornambisan@zohomail.com">kishornambisan@zohomail.com</a></p>
             <p>Visit my LinkedIn Profile @ <a href="https://www.linkedin.com/in/kishor-sankaran-30649612b">https://www.linkedin.com/in/kishor-sankaran-30649612b</a></p>
             <p>Follow me on Instagram @ <a href="https://instagram.com/kishor_sankaran?igshid=OGQ5ZDc2ODk2ZA==">Kishor Sankaran</a></p>
         </div>
@@ -1397,5 +1397,6 @@ s0.parentNode.insertBefore(s1,s0);
 </script>
 <!--End of Tawk.to Script-->
 </html>
+
 
 
