--- a/index.html
+++ b/index.html
@@ -939,7 +939,7 @@
             <h3 id="project-details" class="section-heading">Project Details</h3>
             <div class="section-content skills-content">
                 <div class="skills-box project-details-content" data-aos="fade-up" data-aos-delay="200">
-                    <p><strong>Design & Build Contract for Rehabilitation of Doha South</strong></p>
+                    <p><strong>Design & Build Contract for Rehabilitation of Doha South Sewage Treatment Works</strong></p>
                     <p>Contractor: VA Tech Wabag Limited</p>
                     <p>Client: Public Works Authority (PWA)</p>
                     <p>Consultant: Parsons International Limited</p>
@@ -1397,6 +1397,7 @@ s0.parentNode.insertBefore(s1,s0);
 </script>
 <!--End of Tawk.to Script-->
 </html>
+
 
 
 
