--- a/index.html
+++ b/index.html
@@ -811,7 +811,7 @@
             <div class="profile-column">
                 <h2>What I do</h2>
                 <p>
-                    With over 13 years immersed in Doha's professional sphere, I'm a Document Management Expert. My forte lies in orchestrating seamless information flow across diverse projects. I design efficient systems that effortlessly organize and disseminate crucial documents. By harmonizing technology and efficiency, I drive success in this dynamic field, adapting my expertise to various project types.
+                    With over 13 years of experience in Doha’s professional landscape, I am a Document Management specialist with extensive exposure to Ashghal projects, including Roads and Sewage, as well as major building developments. My expertise lies in ensuring smooth information flow throughout the project lifecycle, with a strong focus on the handover phase. I design and manage efficient systems that organize, control, and deliver critical documentation with precision. By integrating technology and streamlined processes, I support successful project closeouts and adapt my skills to a wide range of complex project environments.
                 </p>
             </div>
             <div class="profile-column">
@@ -1397,6 +1397,7 @@ s0.parentNode.insertBefore(s1,s0);
 </script>
 <!--End of Tawk.to Script-->
 </html>
+
 
 
 
