--- a/index.html
+++ b/index.html
@@ -805,7 +805,7 @@
             <div class="profile-column">
                 <h2>About me</h2>
                 <p>
-                    I am Kishor Sankaran, hailing from Kerala, India. Currently stationed in Doha, Qatar, I bring forth over 12 years of invaluable expertise as a Document Management Expert. My journey has been marked by honing skills in optimizing information systems, primarily in Qatar. This experience, along with my passion for learning new technologies like AI tools, has sculpted me professionally and allowed me to contribute effectively to the field.
+                    I am Kishor Sankaran, originally from Kerala, India, and currently based in Doha, Qatar. With over 13 years of dedicated experience as a Document Management specialist, I have built my career around developing, organizing, and optimizing information systems within Qatar’s construction and infrastructure sector. My professional journey has been shaped by extensive involvement in major projects—particularly those under Ashghal—as well as various building developments where structured documentation and precise control are essential. Alongside my core expertise, I have a strong passion for exploring new technologies, including AI-driven tools, which continually enhances my ability to improve workflows and deliver efficient, reliable document management solutions.
                 </p>
             </div>
             <div class="profile-column">
@@ -817,7 +817,7 @@
             <div class="profile-column">
                 <h2>My Strengths</h2>
                 <p>
-                    My strength as a Document Management Expert is rooted in years of experience. I have mastered the art of transforming chaotic data landscapes into structured, efficient repositories. My abilities lie in strategizing information lifecycles, implementing robust systems, and fostering collaboration among teams, ultimately facilitating streamlined operations and growth.
+                    My strength as a Document Management specialist is built on years of hands-on experience across diverse and demanding project environments. I excel at converting disorganized data into well-structured, accessible, and efficient document repositories. My expertise includes planning and managing complete information lifecycles, implementing reliable and scalable document control systems, and coordinating effectively with multidisciplinary teams. These capabilities ensure smooth project execution, accurate handover deliverables, and a consistently high standard of documentation across all stages of the project.
                 </p>
             </div>
         </div>
@@ -1397,6 +1397,7 @@ s0.parentNode.insertBefore(s1,s0);
 </script>
 <!--End of Tawk.to Script-->
 </html>
+
 
 
 
