--- a/index.html
+++ b/index.html
@@ -825,9 +825,16 @@
         <div class="section-box" data-aos="fade-up" data-aos-delay="100">
             <h3 id="work-experience">Work Experience</h3>
             <div class="section-content skills-content">
+                <!-- EGIS QBC JV -->
+                <div class="work-experience-box" data-aos="fade-up" data-aos-delay="200" onclick="showWorkExperienceDetail('va-tech-wabag')">
+                    <p>2025-Present</p>
+                    <p> Senior Document Controller</p>
+                    <p>EGIS QBC JV</p>
+                    <p>Doha, Qatar</p>
+                </div>
                 <!-- VA Tech Wabag Ltd -->
                 <div class="work-experience-box" data-aos="fade-up" data-aos-delay="200" onclick="showWorkExperienceDetail('va-tech-wabag')">
-                    <p>2023-Present</p>
+                    <p>2023-2025</p>
                     <p> Senior Document Controller (Handover)</p>
                     <p>VA Tech Wabag Ltd</p>
                     <p>Doha, Qatar</p>
@@ -938,6 +945,11 @@
         <div class="section-box" data-aos="fade-up" data-aos-delay="100">
             <h3 id="project-details" class="section-heading">Project Details</h3>
             <div class="section-content skills-content">
+                <div class="skills-box project-details-content" data-aos="fade-up" data-aos-delay="200">
+                    <p><strong>Road Operations and maintenance Framework</strong></p>
+                    <p>Contractor: EGIS QBC JV</p>
+                    <p>Client: Public Works Authority (PWA)</p>
+                </div>
                 <div class="skills-box project-details-content" data-aos="fade-up" data-aos-delay="200">
                     <p><strong>Design & Build Contract for Rehabilitation of Doha South Sewage Treatment Works</strong></p>
                     <p>Contractor: VA Tech Wabag Limited</p>
@@ -1397,6 +1409,7 @@ s0.parentNode.insertBefore(s1,s0);
 </script>
 <!--End of Tawk.to Script-->
 </html>
+
 
 
 
