--- a/index.html
+++ b/index.html
@@ -1133,6 +1133,25 @@
 
     <!-- START: Work Experience Detail Sections (These were previously separate HTML files, now embedded) -->
 
+     <!-- EGIS QBC JV Detail -->
+    <div id="EGIS QBC JV-detail" class="work-detail-container" data-aos="fade-up">
+        <h1>EGIS QBC JV - Senior Document Controller</h1>
+        <p><strong>Dates:</strong> December 2025 - Present</p>
+        <p><strong>Location:</strong> Doha, Qatar</p>
+
+        <h2>Responsibilities & Achievements:</h2>
+        <ul>
+            <li>Manage and control all project documentation for the Roads Maintenance Project, ensuring compliance with Ashghal requirements and project document control procedures.</li>
+            <li>Prepare, maintain, and update logs and registers for all deliverables, technical submissions, correspondences, and records throughout the project lifecycle.</li>
+            <li>Handle submission, tracking, and follow-up of documents through Ashghal CTS, APMS, and PDLM platforms, ensuring timely reviews and approvals.</li>
+            <li>Coordinate with project teams, engineers, and stakeholders to ensure accurate document flow, version control, and proper referencing of submissions.</li>
+            <li>Monitor document status, responses, and deadlines, and provide regular reports to the project management team to support effective decision-making.</li>
+            <li>Support and guide team members on preparing and submitting project documentation.</li>
+            </ul>
+        <button onclick="hideWorkExperienceDetail()" class="back-button">← Back to Portfolio</button>
+        <!-- Designed by Kishor Sankaran Footer for Detail Page -->
+        <p style="text-align: center; margin-top: 30px; font-size: 0.9em; color: #5D605F;">Designed by Kishor Sankaran</p>
+    </div>
     <!-- VA Tech Wabag Ltd Detail -->
     <div id="va-tech-wabag-detail" class="work-detail-container" data-aos="fade-up">
         <h1>VA Tech Wabag Ltd - Senior Document Controller (Handover)</h1>
@@ -1409,6 +1428,7 @@ s0.parentNode.insertBefore(s1,s0);
 </script>
 <!--End of Tawk.to Script-->
 </html>
+
 
 
 
