--- a/index.html
+++ b/index.html
@@ -1155,7 +1155,7 @@
     <!-- VA Tech Wabag Ltd Detail -->
     <div id="va-tech-wabag-detail" class="work-detail-container" data-aos="fade-up">
         <h1>VA Tech Wabag Ltd - Senior Document Controller (Handover)</h1>
-        <p><strong>Dates:</strong> 2023 - Present</p>
+        <p><strong>Dates:</strong> 2023 - 2025</p>
         <p><strong>Location:</strong> Doha, Qatar</p>
 
         <h2>Responsibilities & Achievements:</h2>
@@ -1428,6 +1428,7 @@ s0.parentNode.insertBefore(s1,s0);
 </script>
 <!--End of Tawk.to Script-->
 </html>
+
 
 
 
