--- a/index.html
+++ b/index.html
@@ -1134,7 +1134,7 @@
     <!-- START: Work Experience Detail Sections (These were previously separate HTML files, now embedded) -->
 
      <!-- EGIS QBC JV Detail -->
-    <div id="EGIS-QBC-JV-detail" class="work-detail-container" data-aos="fade-up">
+    <div id="egis-qbc-jv-detail" class="work-detail-container" data-aos="fade-up">
         <h1>EGIS QBC JV - Senior Document Controller</h1>
         <p><strong>Dates:</strong> December 2025 - Present</p>
         <p><strong>Location:</strong> Doha, Qatar</p>
@@ -1428,6 +1428,7 @@ s0.parentNode.insertBefore(s1,s0);
 </script>
 <!--End of Tawk.to Script-->
 </html>
+
 
 
 
