--- a/index.html
+++ b/index.html
@@ -826,7 +826,7 @@
             <h3 id="work-experience">Work Experience</h3>
             <div class="section-content skills-content">
                 <!-- EGIS QBC JV -->
-                <div class="work-experience-box" data-aos="fade-up" data-aos-delay="200" onclick="showWorkExperienceDetail('va-tech-wabag')">
+                <div class="work-experience-box" data-aos="fade-up" data-aos-delay="200" onclick="showWorkExperienceDetail('egis-qbc-jv')">
                     <p>2025-Present</p>
                     <p> Senior Document Controller</p>
                     <p>EGIS QBC JV</p>
@@ -1429,6 +1429,7 @@ s0.parentNode.insertBefore(s1,s0);
 </script>
 <!--End of Tawk.to Script-->
 </html>
+
 
 
 
