--- a/index.html
+++ b/index.html
@@ -1141,6 +1141,9 @@
 
     <h2>Responsibilities & Achievements:</h2>
     <ul>
+        <li>Manage and control all project documentation for the Roads Maintenance Project, ensuring full compliance with Ashghal requirements, contractual obligations, and established document control procedures.</li>
+        <li>Develop, implement, and maintain a standardized project folder structure to ensure systematic storage, easy retrieval, and controlled access to all project records.</li>
+        <li>Prepare, maintain, and continuously update comprehensive registers and logs for all deliverables, technical submissions, correspondences, and records, incorporating clear traceability to facilitate efficient document review and audit processes.</li>
         <li>Manage and control all project documentation for the Roads Maintenance Project, ensuring compliance with Ashghal requirements and project document control procedures.</li>
         <li>Prepare, maintain, and update logs and registers for all deliverables, technical submissions, correspondences, and records throughout the project lifecycle.</li>
         <li>Handle submission, tracking, and follow-up of documents through Ashghal CTS, APMS, and PDLM platforms, ensuring timely reviews and approvals.</li>
@@ -1429,6 +1432,7 @@ s0.parentNode.insertBefore(s1,s0);
 </script>
 <!--End of Tawk.to Script-->
 </html>
+
 
 
 
